<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/primary"
            app:layout_constraintTop_toTopOf="parent">
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
               android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:text="@string/tao_kou_ling"
                app:layout_constraintLeft_toRightOf="@+id/back"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ticket_image"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:background="@color/gray"
           app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="70dp"/>
        <!--加载时显示-->
        <com.example.taobaounion.views.LoadingView
            android:id="@+id/loading_view"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="@+id/ticket_image"
            app:layout_constraintBottom_toBottomOf="@id/ticket_image"
            app:layout_constraintLeft_toLeftOf="@id/ticket_image"
            app:layout_constraintRight_toRightOf="@id/ticket_image"
            />
        <TextView
            android:id="@+id/error_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="@id/ticket_image"
            app:layout_constraintBottom_toBottomOf="@id/ticket_image"
            app:layout_constraintLeft_toLeftOf="@id/ticket_image"
            app:layout_constraintRight_toRightOf="@id/ticket_image"
            android:text="@string/loading_image_error"
            android:visibility="gone"/>



        <TextView
            android:id="@+id/ticket"
            android:layout_width="244dp"
            android:layout_height="40dp"
            android:textSize="15sp"
            android:gravity="center"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ticket_image"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_text"/>
        <TextView
            android:id="@+id/ling_juan"
            android:text="@string/ling_juan"
            android:textSize="18sp"
            android:gravity="center"
            android:focusable="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_width="141dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ticket"
            android:background="@drawable/shape_button"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>