<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.taobaounion.viewmodel.search.SearchViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

       <androidx.constraintlayout.widget.ConstraintLayout
           android:id="@+id/title"
           android:layout_width="match_parent"
           android:layout_height="40dp"
           app:layout_constraintTop_toTopOf="parent"
           android:background="@color/primary">
           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/search_edittext"
               android:layout_width="0dp"
               android:layout_height="30dp"
               android:layout_marginLeft="10dp"
               android:layout_marginRight="10dp"
               android:paddingLeft="10dp"
               android:paddingRight="10dp"
               android:hint="搜索"
               android:singleLine="true"
               android:imeOptions="actionSearch"
               android:text="@={viewModel.keyWord}"
               android:background="@drawable/shape_edittext"
               app:layout_constraintLeft_toLeftOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintRight_toLeftOf="@+id/search_button"/>

           <com.google.android.material.imageview.ShapeableImageView
               android:id="@+id/search_remove"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               app:layout_constraintTop_toTopOf="@+id/search_edittext"
               app:layout_constraintRight_toRightOf="@+id/search_edittext"
               app:layout_constraintBottom_toBottomOf="@+id/search_edittext"
               android:src="@drawable/shanchuyuan"
               android:padding="8dp"
               android:visibility="gone"/>

           <TextView
               android:id="@+id/search_button"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:gravity="center"
               android:paddingStart="20dp"
               android:paddingEnd="15dp"
               android:text="@string/text_search"
               android:textColor="@color/white"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintRight_toRightOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintVertical_bias="0.523" />
           
       </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/history_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            android:text="@string/text_history_title"
            android:padding="16dp"
            android:textSize="14sp"
            android:visibility="@{viewModel.historyVisibility}"/>
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/histories_delete"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:src="@drawable/delete_icon"
            app:layout_constraintTop_toBottomOf="@id/title"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/history_title"
            app:layout_constraintRight_toRightOf="parent"
            android:visibility="@{viewModel.historyVisibility}"/>
        <com.example.taobaounion.views.FlowTextLayout
            android:id="@+id/histories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/history_title"
            app:horizontal_space="10dp"
            android:padding="5dp"
            text_list="@{viewModel.histories}"
            android:visibility="@{viewModel.historyVisibility}"/>
        <TextView
            android:id="@+id/recommend_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/histories"
            android:text="@string/text_recommend_title"
            android:padding="16dp"
            android:textSize="14sp"
            android:visibility="@{viewModel.recommendVisibility}"/>
        <com.example.taobaounion.views.FlowTextLayout
            android:id="@+id/recommends"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/recommend_title"
            app:horizontal_space="10dp"
            text_list="@{viewModel.recommends}"
            android:visibility="@{viewModel.recommendVisibility}"/>

        <com.scwang.smart.refresh.layout.SmartRefreshLayout
            android:id="@+id/smart_refreshLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            android:visibility="@{viewModel.refreshLayoutVisibility}"
            >
            <com.scwang.smart.refresh.header.ClassicsHeader
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/search_result_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/list_item_search_content"/>
            <com.scwang.smart.refresh.footer.ClassicsFooter
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.scwang.smart.refresh.layout.SmartRefreshLayout>

        <com.example.taobaounion.views.LoadStateView
            android:id="@+id/load_state_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            android:visibility="gone"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>